--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>OOTY</h1>
+	<hr>
+	<p>Ooty, also known as Udhagamandalam, is a beautiful hill station nestled in the Nilgiri Hills of Tamil Nadu, India. 
+		It's famous for its cool climate, lush green landscapes, tea gardens, and scenic toy train rides.
+    </p>
+	<ol>
+		<li style="font-weight:bold">location</li>
+        <li style="font-weight:bold">weather</li>
+		<li style="font-weight:bold">cool</li>
+		<li style="font-weight:bold">Pleasent</li>
+		<li style="font-weight:bold">places</li>
+	</ol>
+	<ul>
+		<li style="font-weight:bold">idly</li>
+		<li style="font-weight:bold">sambar</li>
+		<li style="font-weight:bold">vada</li>
+		<li style="font-weight:bold">puri</li>
+		<li style="font-weight:bold">dosa</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
