--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 	<ul>
 		<li style="font-weight:bold">idly</li>
 		<li style="font-weight:bold">sambar</li>
-		<li style="font-weight:bold">vada</li>
+		<li style="font-weight:italic">vada</li>
 		<li style="font-weight:bold">puri</li>
 		<li style="font-weight:bold">dosa</li>
 	</ul>
