--- a/main.html
+++ b/main.html
@@ -14,18 +14,18 @@
 		It's famous for its cool climate, lush green landscapes, tea gardens, and scenic toy train rides.
     </p>
 	<ol>
-		<li style="font-weight:bold">location</li>
-        <li style="font-weight:bold">weather</li>
-		<li style="font-weight:bold">cool</li>
-		<li style="font-weight:bold">Pleasent</li>
-		<li style="font-weight:bold">places</li>
+		<li ><strong>location</strong></li>
+        <li ><strong>weather</strong></li>
+		<li ><strong>cool</strong></li>
+		<li ><strong>Pleasent</strong></li>
+		<li ><strong>places</strong></li>
 	</ol>
 	<ul>
-		<li style="font-weight:bold">idly</li>
-		<li style="font-weight:bold">sambar</li>
-		<li style="font-weight:italic">vada</li>
-		<li style="font-weight:bold">puri</li>
-		<li style="font-weight:bold">dosa</li>
+		<li ><strong>idly</strong></li>
+		<li ><strong>sambar</strong></li>
+		<li ><em>vada</em></li>
+		<li ><strong>puri</strong></li>
+		<li ><strong>dosa</strong></li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
