--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		<li ><strong>location</strong></li>
         <li ><strong>weather</strong></li>
 		<li ><strong>cool</strong></li>
-		<li ><strong>Pleasent</strong></li>
+		<li ><b>Pleasent</b></li>
 		<li ><strong>places</strong></li>
 	</ol>
 	<ul>
@@ -25,7 +25,7 @@
 		<li ><strong>sambar</strong></li>
 		<li ><em>vada</em></li>
 		<li ><strong>puri</strong></li>
-		<li ><strong>dosa</strong></li>
+		<li ><i>dosa</i></li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
